; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/llc/extr_llc_s_ac.c_llc_sap_action_send_test_c.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/llc/extr_llc_s_ac.c_llc_sap_action_send_test_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.llc_sap = type { i32 }
%struct.sk_buff = type { i32 }
%struct.llc_sap_state_ev = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@LLC_PDU_TYPE_U = common dso_local global i32 0, align 4
@LLC_PDU_CMD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @llc_sap_action_send_test_c(%struct.llc_sap* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.llc_sap*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.llc_sap_state_ev*, align 8
  %6 = alloca i32, align 4
  store %struct.llc_sap* %0, %struct.llc_sap** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %7 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %8 = call %struct.llc_sap_state_ev* @llc_sap_ev(%struct.sk_buff* %7)
  store %struct.llc_sap_state_ev* %8, %struct.llc_sap_state_ev** %5, align 8
  %9 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %10 = load i32, i32* @LLC_PDU_TYPE_U, align 4
  %11 = load %struct.llc_sap_state_ev*, %struct.llc_sap_state_ev** %5, align 8
  %12 = getelementptr inbounds %struct.llc_sap_state_ev, %struct.llc_sap_state_ev* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.llc_sap_state_ev*, %struct.llc_sap_state_ev** %5, align 8
  %16 = getelementptr inbounds %struct.llc_sap_state_ev, %struct.llc_sap_state_ev* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @LLC_PDU_CMD, align 4
  %20 = call i32 @llc_pdu_header_init(%struct.sk_buff* %9, i32 %10, i32 %14, i32 %18, i32 %19)
  %21 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %22 = call i32 @llc_pdu_init_as_test_cmd(%struct.sk_buff* %21)
  %23 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %24 = load %struct.llc_sap_state_ev*, %struct.llc_sap_state_ev** %5, align 8
  %25 = getelementptr inbounds %struct.llc_sap_state_ev, %struct.llc_sap_state_ev* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.llc_sap_state_ev*, %struct.llc_sap_state_ev** %5, align 8
  %29 = getelementptr inbounds %struct.llc_sap_state_ev, %struct.llc_sap_state_ev* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @llc_mac_hdr_init(%struct.sk_buff* %23, i32 %27, i32 %31)
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  %35 = xor i1 %34, true
  %36 = zext i1 %35 to i32
  %37 = call i64 @likely(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %2
  %40 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %41 = call i32 @dev_queue_xmit(%struct.sk_buff* %40)
  store i32 %41, i32* %6, align 4
  br label %42

42:                                               ; preds = %39, %2
  %43 = load i32, i32* %6, align 4
  ret i32 %43
}

declare dso_local %struct.llc_sap_state_ev* @llc_sap_ev(%struct.sk_buff*) #1

declare dso_local i32 @llc_pdu_header_init(%struct.sk_buff*, i32, i32, i32, i32) #1

declare dso_local i32 @llc_pdu_init_as_test_cmd(%struct.sk_buff*) #1

declare dso_local i32 @llc_mac_hdr_init(%struct.sk_buff*, i32, i32) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @dev_queue_xmit(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
